@@ -107,8 +107,10 @@ New configuration options:
   skillslooks.txt, skillsstate.txt and skillsailments.txt in the latest
   tablepack for a list of names.
 - equipAuto_*
-- useSelf_skill_0_notWhileSitting
+- useSelf_skill_#_notWhileSitting
   If set to 1, this skill will not be used while sitting.
+- useSelf_skill_#_notInTown
+  If set to 1, this skill will not be used if you're in town.
 - route_maxWarpFee
   The maximum amount of money you're willing to spend on a Kapra which
   teleports you to another map.
